--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "files.autoSave": "afterDelay",
-    "editor.fontFamily": "Monaco, 'Courier New', monospace"
+    "editor.fontFamily": "Monaco, 'Courier New', monospace",
+    "python.formatting.provider": "black"
 }
