--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ title: [Install & run Apache Spark on Mac and AWS cloud]
 description: [Learn Apache spark by doing hands on]
 github:
   home_url: https://rupeshtiwari.com
+  another_url: https://rupeshtiwari.com
